--- a/src/main/resources/META-INF/mods.toml
+++ b/src/main/resources/META-INF/mods.toml
@@ -20,6 +20,12 @@ authors="jackh, MCreator"
     ordering="AFTER"
     side="BOTH"
 
+[[dependencies.broken_smp_god_shards]]
+    modId="mcreator_link"
+    mandatory=true
+    versionRange="[0,)"
+    ordering="NONE"
+    side="BOTH"
 
 [[dependencies.broken_smp_god_shards]]
     modId="geckolib"
