fixed some stuff

--- a/src/main/resources/data/broken_smp_god_shards/forge/biome_modifier/turret_between_biome_modifier.json
+++ b/src/main/resources/data/broken_smp_god_shards/forge/biome_modifier/turret_between_biome_modifier.json
@@ -1,8 +1,10 @@
 {
   "type": "forge:add_spawns",
-  "biomes": {
-    "type": "forge:any"
-  },
+  "biomes": [
+    "broken_smp_god_shards:betweencaves",
+    "broken_smp_god_shards:the_i_nbetween",
+    "broken_smp_god_shards:the_living_between_forest"
+  ],
   "spawners": {
     "type": "broken_smp_god_shards:turret_between",
     "weight": 20,
