--- a/src/main/resources/data/broken_smp_god_shards/forge/biome_modifier/golemspawn_biome_modifier.json
+++ b/src/main/resources/data/broken_smp_god_shards/forge/biome_modifier/golemspawn_biome_modifier.json
@@ -1,6 +1,11 @@
 {
   "type": "forge:add_spawns",
-  "biomes": "dark_forest",
+  "biomes": [
+    "dark_forest",
+    "broken_smp_god_shards:betweencaves",
+    "broken_smp_god_shards:the_i_nbetween",
+    "broken_smp_god_shards:the_living_between_forest"
+  ],
   "spawners": {
     "type": "broken_smp_god_shards:golemspawn",
     "weight": 20,
