--- a/src/main/resources/data/broken_smp_god_shards/forge/biome_modifier/enity_609animated_biome_modifier.json
+++ b/src/main/resources/data/broken_smp_god_shards/forge/biome_modifier/enity_609animated_biome_modifier.json
@@ -1,14 +1,12 @@
 {
   "type": "forge:add_spawns",
-  "biomes": [
-    "broken_smp_god_shards:betweencaves",
-    "broken_smp_god_shards:the_i_nbetween",
-    "broken_smp_god_shards:the_living_between_forest"
-  ],
+  "biomes": {
+    "type": "forge:any"
+  },
   "spawners": {
     "type": "broken_smp_god_shards:enity_609animated",
-    "weight": 20,
-    "minCount": 4,
-    "maxCount": 4
+    "weight": 30,
+    "minCount": 10,
+    "maxCount": 14
   }
 }
